# Mapping

./: README.md  package.xml
maps/: map_pcd.pcd
mapsaver/: CMakeLists.txt  test_pcd.pcd
mapsaver/src/: mapsaver.cpp
